<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>com.blackducksoftware.integration</groupId>
    <artifactId>common-maven-parent</artifactId>
    <version>5.0.0</version>
  </parent>

  <!-- If the group or artifact changes then you must update JiraServices.getPluginVersion() -->
  <artifactId>hub-jira</artifactId>
  <version>6.3.3-SNAPSHOT</version>
  <packaging>atlassian-plugin</packaging>

  <name>Black Duck JIRA Plugin</name>
  <description>Black Duck JIRA Integration</description>
  <organization>
    <name>Synopsys, Inc.</name>
    <url>https://www.synopsys.com/</url>
  </organization>

  <developers>
    <developer>
      <id>integrations</id>
      <name>Synopsys Integrations</name>
      <email>integrations@synopsys.com</email>
      <organization>Synopsys, Inc.</organization>
      <organizationUrl>https://www.synopsys.com/</organizationUrl>
      <roles>
        <role>developer</role>
      </roles>
      <timezone>America/New_York</timezone>
    </developer>
  </developers>

  <distributionManagement>
    <repository>
      <id>bds-artifactory</id>
      <url>https://artifactory.internal.synopsys.com/artifactory/bds-integrations-release</url>
    </repository>
    <snapshotRepository>
      <id>artifactory.blackducksoftware.com</id>
      <url>https://artifactory.internal.synopsys.com/artifactory/bds-integrations-snapshot</url>
    </snapshotRepository>
  </distributionManagement>

  <properties>
    <!--  For production builds, use: amps.version: 5.0.13 jira.version: 5.2.11 -->
    <!-- To use quickReload, use: amps.version: 6.2.4 jira.version: 7.1.4 -->
    <amps.version>8.0.0</amps.version>
    <atlassian.plugin.key>${project.groupId}.${project.artifactId}</atlassian.plugin.key>
    <jira.version>7.4.5</jira.version>
    <plugin.testrunner.version>1.1.4</plugin.testrunner.version>
    <!-- TestKit version 5.x for JIRA 5.x, 6.x for JIRA 6.x -->
    <testkit.version>5.2.26</testkit.version>
  </properties>

  <repositories>
    <repository>
      <releases>
        <enabled>true</enabled>
        <checksumPolicy>warn</checksumPolicy>
      </releases>
      <snapshots>
        <enabled>true</enabled>
        <updatePolicy>never</updatePolicy>
        <checksumPolicy>warn</checksumPolicy>
      </snapshots>
      <id>atlassian-public</id>
      <url>https://maven.atlassian.com/repository/public</url>
    </repository>
  </repositories>
  <pluginRepositories>
    <pluginRepository>
      <releases>
        <enabled>true</enabled>
        <checksumPolicy>warn</checksumPolicy>
      </releases>
      <snapshots>
        <updatePolicy>never</updatePolicy>
        <checksumPolicy>warn</checksumPolicy>
      </snapshots>
      <id>atlassian-public</id>
      <url>https://maven.atlassian.com/repository/public</url>
    </pluginRepository>
  </pluginRepositories>

  <dependencies>

    <dependency>
      <groupId>com.blackducksoftware.integration</groupId>
      <artifactId>blackduck-common</artifactId>
      <version>42.6.0</version>
      <exclusions>
        <exclusion>
          <groupId>com.blackducksoftware.integration</groupId>
          <artifactId>hub-common-reporting</artifactId>
        </exclusion>
        <exclusion>
          <groupId>com.thoughtworks.xstream</groupId>
          <artifactId>xstream</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <!-- JIRA brings in an older version of commons-io by default so we need to demand our version explicitly -->
    <dependency>
      <groupId>commons-io</groupId>
      <artifactId>commons-io</artifactId>
      <version>2.6</version>
    </dependency>
    <dependency>
      <groupId>stax</groupId>
      <artifactId>stax-api</artifactId>
      <version>1.0.1</version>
      <scope>compile</scope>
    </dependency>
    <!-- http://mvnrepository.com/artifact/com.sun.net.httpserver/http -->
    <dependency>
      <groupId>com.sun.net.httpserver</groupId>
      <artifactId>http</artifactId>
      <version>20070405</version>
      <scope>compile</scope>
    </dependency>

    <dependency>
      <groupId>com.blackducksoftware.integration</groupId>
      <artifactId>integration-common</artifactId>
      <version>17.0.0</version>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>1.7.9</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>com.atlassian.jira</groupId>
      <artifactId>jira-core</artifactId>
      <version>${jira.version}</version>
      <scope>provided</scope>
      <exclusions>
        <exclusion>
          <groupId>org.apache.httpcomponents</groupId>
          <artifactId>httpclient</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.apache.httpcomponents</groupId>
          <artifactId>httpcore</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.apache.httpcomponents</groupId>
          <artifactId>httpmime</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.apache.commons</groupId>
          <artifactId>commons-lang3</artifactId>
        </exclusion>
        <exclusion>
          <groupId>jndi</groupId>
          <artifactId>jndi</artifactId>
        </exclusion>
        <exclusion>
          <groupId>jta</groupId>
          <artifactId>jta</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>com.atlassian.jira</groupId>
      <artifactId>jira-api</artifactId>
      <version>${jira.version}</version>
      <scope>provided</scope>
      <exclusions>
        <exclusion>
          <groupId>org.apache.httpcomponents</groupId>
          <artifactId>httpmime</artifactId>
        </exclusion>
        <exclusion>
          <groupId>jta</groupId>
          <artifactId>jta</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.apache.commons</groupId>
          <artifactId>commons-lang3</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <!-- must include this jta dependency to override the one from the jira-api, see https://jira.atlassian.com/browse/JRA-43031 -->
    <dependency>
      <groupId>javax.transaction</groupId>
      <artifactId>jta</artifactId>
      <version>1.0.1B</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>javax.ws.rs</groupId>
      <artifactId>jsr311-api</artifactId>
      <version>1.1.1</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>javax.servlet</groupId>
      <artifactId>servlet-api</artifactId>
      <version>2.4</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.atlassian.sal</groupId>
      <artifactId>sal-api</artifactId>
      <version>3.0.7</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.atlassian.templaterenderer</groupId>
      <artifactId>atlassian-template-renderer-api</artifactId>
      <version>1.1.1</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>javax.inject</groupId>
      <artifactId>javax.inject</artifactId>
      <version>1</version>
      <scope>provided</scope>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.springframework/spring-beans -->
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-beans</artifactId>
      <version>2.5.6.SEC03</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-context</artifactId>
      <version>2.5.6.SEC03</version>
      <scope>provided</scope>
    </dependency>
    <!-- WIRED TEST RUNNER DEPENDENCIES -->
    <dependency>
      <groupId>com.atlassian.plugins</groupId>
      <artifactId>atlassian-plugins-osgi-testrunner</artifactId>
      <version>${plugin.testrunner.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.blackducksoftware.integration</groupId>
      <artifactId>integration-test-common</artifactId>
      <version>4.0.5</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.22.1</version>
        <configuration>
          <useSystemClassLoader>false</useSystemClassLoader>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.1</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>com.atlassian.maven.plugins</groupId>
        <artifactId>jira-maven-plugin</artifactId>
        <version>${amps.version}</version>
        <extensions>true</extensions>
        <configuration>
          <productVersion>${jira.version}</productVersion>
          <productDataVersion>${jira.version}</productDataVersion>
          <compressResources>false</compressResources>
          <enableQuickReload>true</enableQuickReload>
          <enableFastdev>false</enableFastdev>
          <jvmArgs>-Xms1g -Xmx2g -XX:MaxPermSize=1g -XX:-UseGCOverheadLimit -server</jvmArgs>
          <instructions>
            <Private-Package>com.synopsys.integration.blackduck.*</Private-Package>
            <Private-Package>com.synopsys.integration.blackduck.exception.*</Private-Package>
          </instructions>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <configuration>
          <archive>
            <manifest>
              <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
              <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
            </manifest>
          </archive>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
